# cookiecutter-cms-pycpp

./: .gitmodules
{{cookiecutter.repo_name}}/: .gitignore  CMakeLists.txt  setup.py
{{cookiecutter.repo_name}}/include/: simple_include.hpp
{{cookiecutter.repo_name}}/src/: py_simple.cpp  simple_cpp.cxx
{{cookiecutter.repo_name}}/src/tests/: CMakeLists.txt  test_simple_prog.cpp
